Added domain, auth/registration

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /PetPlayBackend/PetPlayBackend/bin
 /PetPlayBackend/PetPlayBackend/obj
+/PetPlayBackend/PetPlayBackend.BusinessLogic/bin
+/PetPlayBackend/PetPlayBackend.BusinessLogic/obj
+/PetPlayBackend/PetPlayBackend.Domain/bin
+/PetPlayBackend/PetPlayBackend.Domain/obj
