--- a/PetPlayBackend/PetPlayBackend.Domain/PetPlayBackend.Domain.csproj
+++ b/PetPlayBackend/PetPlayBackend.Domain/PetPlayBackend.Domain.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20181022191820_added-pets.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.4">
       <PrivateAssets>all</PrivateAssets>
