--- a/PetPlayUI/package.json
+++ b/PetPlayUI/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ngx-loading-bar/http-client": "^2.2.0",
+    "@ngx-loading-bar/router": "^2.2.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "~0.8.26"
