--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /PetPlayBackend/PetPlayBackend.BusinessLogic/obj
 /PetPlayBackend/PetPlayBackend.Domain/bin
 /PetPlayBackend/PetPlayBackend.Domain/obj
+/PetPlayMobile/PetPlayMobile/bin
+/PetPlayMobile/PetPlayMobile/obj
